--- a/content/stats/consecutiveruns.html
+++ b/content/stats/consecutiveruns.html
@@ -2046,7 +2046,7 @@ Scherlund
 2
 </td>
 </tr>
-<tr grouplength="11">
+<tr grouplength="12">
 <td colspan="9" style="background-color: #666; color: #fff;">
 <strong>3 raka</strong>
 </td>
@@ -2370,6 +2370,35 @@ Nyberg
 4
 </td>
 </tr>
+<tr>
+<td style="text-align:left; padding-left: 2em;" indentlevel="1">
+XXVIII
+</td>
+<td style="text-align:left;">
+Umeå
+</td>
+<td style="text-align:left;">
+HT-20
+</td>
+<td style="text-align:left;">
+r1
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:left;">
+Östh
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+4
+</td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -2472,7 +2501,7 @@ Wänman
 1
 </td>
 </tr>
-<tr grouplength="25">
+<tr grouplength="27">
 <td colspan="9" style="background-color: #666; color: #fff;">
 <strong>2 raka</strong>
 </td>
@@ -3194,6 +3223,64 @@ r2
 </td>
 <td style="text-align:left;">
 Wiklund
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+3
+</td>
+</tr>
+<tr>
+<td style="text-align:left; padding-left: 2em;" indentlevel="1">
+XXVIII
+</td>
+<td style="text-align:left;">
+Umeå
+</td>
+<td style="text-align:left;">
+HT-20
+</td>
+<td style="text-align:left;">
+r2
+</td>
+<td style="text-align:right;">
+12
+</td>
+<td style="text-align:right;">
+13
+</td>
+<td style="text-align:left;">
+Strömdahl
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+3
+</td>
+</tr>
+<tr>
+<td style="text-align:left; padding-left: 2em;" indentlevel="1">
+XXVIII
+</td>
+<td style="text-align:left;">
+Umeå
+</td>
+<td style="text-align:left;">
+HT-20
+</td>
+<td style="text-align:left;">
+r2
+</td>
+<td style="text-align:right;">
+17
+</td>
+<td style="text-align:right;">
+18
+</td>
+<td style="text-align:left;">
+Östh
 </td>
 <td style="text-align:right;">
 2
