--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -10,7 +10,7 @@ title: 'about'
 <hr />
 <div id="regerande-champ" class="section level2">
 <h2>Regerande Champ</h2>
-<p><img src="/img/champs/thumbs/tour27.jpg" /></p>
+<p><img src="/img/champs/thumbs/tour28.jpg" /></p>
 <hr />
 </div>
 <div id="översikt" class="section level2">
@@ -541,6 +541,32 @@ Nyberg
 </tr>
 <tr>
 <td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
+20
+</td>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
+Barcelona
+</td>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;border-right:1px solid;">
+HT-15
+</td>
+<td style="text-align:center;">
+NA
+</td>
+<td style="text-align:center;">
+NA
+</td>
+<td style="text-align:center;">
+NA
+</td>
+<td style="text-align:center;">
+NA
+</td>
+<td style="text-align:center;">
+10
+</td>
+</tr>
+<tr>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
 21
 </td>
 <td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
@@ -719,6 +745,32 @@ Strömdahl
 </td>
 <td style="text-align:center;">
 6
+</td>
+</tr>
+<tr>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
+28
+</td>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
+Umeå
+</td>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;border-right:1px solid;">
+HT-20
+</td>
+<td style="text-align:center;">
+Karlsson
+</td>
+<td style="text-align:center;">
+Karlsson
+</td>
+<td style="text-align:center;">
+Strömdahl
+</td>
+<td style="text-align:center;">
+Östh
+</td>
+<td style="text-align:center;">
+8
 </td>
 </tr>
 </tbody>
