--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -833,7 +833,7 @@ hål 46, 49, 51 och tillslut från och med hål 54.
 <li>Denna metod används även för särskiljning avseende spurtpriset, då
 bräkningen utgår från hål 46 o.s.v.</li>
 <li><small> Till och med Tour XIII (HT-11, Skellefteå) användes
-<strong>HCP-metoden</strong>, dvs vid oavgjort vann den med lägst antal erhållna
+<em>HCP-metoden</em>, dvs vid oavgjort vann den med lägst antal erhållna
 slag på slopen.</small>
 <br><br></li>
 </ul></li>
