improved season-stats

--- a/content/stats/spring_vs_fall.html
+++ b/content/stats/spring_vs_fall.html
@@ -9,7 +9,6 @@ summary: Scorer på hösten och våren
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>Scorer på hösten och våren.</p>
-<pre><code>## Warning: It is deprecated to specify `guide = FALSE` to remove a guide. Please
-## use `guide = &quot;none&quot;` instead.</code></pre>
-<p><img src="/stats/spring_vs_fall_files/figure-html/plot-1.png" width="100%" /></p>
+<p>Jämför scorer (brutto) mellan höst och vår inom samma kalenderår.</p>
+<p><img src="/stats/spring_vs_fall_files/figure-html/unnamed-chunk-1-1.png" width="100%" /></p>
+<p><img src="/stats/spring_vs_fall_files/figure-html/unnamed-chunk-2-1.png" width="100%" /></p>
