--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -3,7 +3,6 @@ output: html_document
 title: 'about'
 ---
 
-<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 <script src="/rmarkdown-libs/kePrint/kePrint.js"></script>
 <link href="/rmarkdown-libs/lightable/lightable.css" rel="stylesheet" />
 
@@ -12,7 +11,7 @@ title: 'about'
 <hr />
 <div id="regerande-champ" class="section level2">
 <h2>Regerande Champ</h2>
-<p><img src="/img/champs/thumbs/tour29.jpg" /></p>
+<p><img src="/img/champs/thumbs/tour30.jpg" /></p>
 <hr />
 </div>
 <div id="översikt" class="section level2">
@@ -799,6 +798,32 @@ Nyberg
 </td>
 <td style="text-align:center;">
 7
+</td>
+</tr>
+<tr>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
+30
+</td>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
+Uppsala
+</td>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;border-right:1px solid;">
+VT-22
+</td>
+<td style="text-align:center;">
+Scherlund
+</td>
+<td style="text-align:center;">
+Karlsson
+</td>
+<td style="text-align:center;">
+Wiklund
+</td>
+<td style="text-align:center;">
+Lundström
+</td>
+<td style="text-align:center;">
+6
 </td>
 </tr>
 </tbody>
