--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -11,7 +11,7 @@ title: 'about'
 <hr />
 <div id="regerande-champ" class="section level2">
 <h2>Regerande Champ</h2>
-<p><img src="/img/champs/thumbs/tour30.jpg" /></p>
+<p><img src="/img/champs/thumbs/tour31.jpg" /></p>
 <hr />
 </div>
 <div id="översikt" class="section level2">
@@ -821,6 +821,32 @@ Wiklund
 </td>
 <td style="text-align:center;">
 Lundström
+</td>
+<td style="text-align:center;">
+6
+</td>
+</tr>
+<tr>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
+31
+</td>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
+Nice
+</td>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;border-right:1px solid;">
+HT-22
+</td>
+<td style="text-align:center;">
+Karlsson
+</td>
+<td style="text-align:center;">
+NA
+</td>
+<td style="text-align:center;">
+Karlsson
+</td>
+<td style="text-align:center;">
+Wänman
 </td>
 <td style="text-align:center;">
 6
