--- a/content/stats/consecutiveruns.html
+++ b/content/stats/consecutiveruns.html
@@ -202,7 +202,7 @@ Wiklund
 1
 </td>
 </tr>
-<tr grouplength="18">
+<tr grouplength="19">
 <td colspan="9" style="background-color: #666; color: #fff;">
 <strong>3 raka</strong>
 </td>
@@ -721,6 +721,35 @@ r1
 </td>
 <td style="text-align:left;">
 Karlsson
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+6
+</td>
+</tr>
+<tr>
+<td style="text-align:left;padding-left: 2em;" indentlevel="1">
+XXXI
+</td>
+<td style="text-align:left;">
+Nice
+</td>
+<td style="text-align:left;">
+HT-22
+</td>
+<td style="text-align:left;">
+r1
+</td>
+<td style="text-align:right;">
+16
+</td>
+<td style="text-align:right;">
+18
+</td>
+<td style="text-align:left;">
+Wibom
 </td>
 <td style="text-align:right;">
 3
@@ -2105,7 +2134,7 @@ Scherlund
 2
 </td>
 </tr>
-<tr grouplength="13">
+<tr grouplength="17">
 <td colspan="9" style="background-color: #666; color: #fff;">
 <strong>3 raka</strong>
 </td>
@@ -2487,6 +2516,122 @@ Karlsson
 4
 </td>
 </tr>
+<tr>
+<td style="text-align:left;padding-left: 2em;" indentlevel="1">
+XXXI
+</td>
+<td style="text-align:left;">
+Nice
+</td>
+<td style="text-align:left;">
+HT-22
+</td>
+<td style="text-align:left;">
+r3
+</td>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
+11
+</td>
+<td style="text-align:left;">
+Nyberg
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+4
+</td>
+</tr>
+<tr>
+<td style="text-align:left;padding-left: 2em;" indentlevel="1">
+XXXI
+</td>
+<td style="text-align:left;">
+Nice
+</td>
+<td style="text-align:left;">
+HT-22
+</td>
+<td style="text-align:left;">
+r3
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:left;">
+Strömdahl
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+4
+</td>
+</tr>
+<tr>
+<td style="text-align:left;padding-left: 2em;" indentlevel="1">
+XXXI
+</td>
+<td style="text-align:left;">
+Nice
+</td>
+<td style="text-align:left;">
+HT-22
+</td>
+<td style="text-align:left;">
+r3
+</td>
+<td style="text-align:right;">
+16
+</td>
+<td style="text-align:right;">
+18
+</td>
+<td style="text-align:left;">
+Scherlund
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+4
+</td>
+</tr>
+<tr>
+<td style="text-align:left;padding-left: 2em;" indentlevel="1">
+XXXI
+</td>
+<td style="text-align:left;">
+Nice
+</td>
+<td style="text-align:left;">
+HT-22
+</td>
+<td style="text-align:left;">
+r3
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+Wänman
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+4
+</td>
+</tr>
 </tbody>
 </table>
 </div>
@@ -2526,7 +2671,7 @@ Ranking
 </tr>
 </thead>
 <tbody>
-<tr grouplength="2">
+<tr grouplength="4">
 <td colspan="9" style="background-color: #666; color: #fff;">
 <strong>3 raka</strong>
 </td>
@@ -2589,7 +2734,65 @@ Wänman
 1
 </td>
 </tr>
-<tr grouplength="30">
+<tr>
+<td style="text-align:left;padding-left: 2em;" indentlevel="1">
+XXXI
+</td>
+<td style="text-align:left;">
+Nice
+</td>
+<td style="text-align:left;">
+HT-22
+</td>
+<td style="text-align:left;">
+r3
+</td>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
+11
+</td>
+<td style="text-align:left;">
+Nyberg
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+1
+</td>
+</tr>
+<tr>
+<td style="text-align:left;padding-left: 2em;" indentlevel="1">
+XXXI
+</td>
+<td style="text-align:left;">
+Nice
+</td>
+<td style="text-align:left;">
+HT-22
+</td>
+<td style="text-align:left;">
+r3
+</td>
+<td style="text-align:right;">
+16
+</td>
+<td style="text-align:right;">
+18
+</td>
+<td style="text-align:left;">
+Scherlund
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:right;">
+1
+</td>
+</tr>
+<tr grouplength="31">
 <td colspan="9" style="background-color: #666; color: #fff;">
 <strong>2 raka</strong>
 </td>
@@ -2620,7 +2823,7 @@ Wänman
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2649,7 +2852,7 @@ Karlsson
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2678,7 +2881,7 @@ Forsell
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2707,7 +2910,7 @@ Lundström
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2736,7 +2939,7 @@ Lundström
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2765,7 +2968,7 @@ Karlsson
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2794,7 +2997,7 @@ Forsgren
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2823,7 +3026,7 @@ Wibom
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2852,7 +3055,7 @@ Lundström
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2881,7 +3084,7 @@ Wänman
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2910,7 +3113,7 @@ Nyberg
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2939,7 +3142,7 @@ Wibom
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2968,7 +3171,7 @@ Scherlund
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -2997,7 +3200,7 @@ Wibom
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3026,7 +3229,7 @@ Wiklund
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3055,7 +3258,7 @@ Wibom
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3084,7 +3287,7 @@ Wänman
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3113,7 +3316,7 @@ Wänman
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3142,7 +3345,7 @@ Wiklund
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3171,7 +3374,7 @@ Jonsson
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3200,7 +3403,7 @@ Lundström
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3229,7 +3432,7 @@ Jonsson
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3258,7 +3461,7 @@ Nyberg
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3287,7 +3490,7 @@ Scherlund
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3316,7 +3519,7 @@ Wiklund
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3345,7 +3548,7 @@ Strömdahl
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3374,7 +3577,7 @@ r2
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3403,7 +3606,7 @@ Nyberg
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3432,7 +3635,7 @@ Lundström
 2
 </td>
 <td style="text-align:right;">
-3
+5
 </td>
 </tr>
 <tr>
@@ -3461,7 +3664,36 @@ Wiklund
 2
 </td>
 <td style="text-align:right;">
-3
+5
+</td>
+</tr>
+<tr>
+<td style="text-align:left;padding-left: 2em;" indentlevel="1">
+XXXI
+</td>
+<td style="text-align:left;">
+Nice
+</td>
+<td style="text-align:left;">
+HT-22
+</td>
+<td style="text-align:left;">
+r3
+</td>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:right;">
+11
+</td>
+<td style="text-align:left;">
+Strömdahl
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+5
 </td>
 </tr>
 </tbody>
