--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -11,7 +11,7 @@ title: 'about'
 <hr />
 <div id="regerande-champ" class="section level2">
 <h2>Regerande Champ</h2>
-<p><img src="/img/champs/thumbs/tour31.jpg" /></p>
+<p><img src="/img/champs/thumbs/tour32.jpg" /></p>
 <hr />
 </div>
 <div id="översikt" class="section level2">
@@ -847,6 +847,32 @@ Karlsson
 </td>
 <td style="text-align:center;">
 Wänman
+</td>
+<td style="text-align:center;">
+6
+</td>
+</tr>
+<tr>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
+32
+</td>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;">
+Umeå
+</td>
+<td style="text-align:center;font-weight: bold;color: white !important;background-color: #990000 !important;border-right:1px solid;">
+HT-23
+</td>
+<td style="text-align:center;">
+Scherlund
+</td>
+<td style="text-align:center;">
+Karlsson
+</td>
+<td style="text-align:center;">
+Karlsson
+</td>
+<td style="text-align:center;">
+Lundström
 </td>
 <td style="text-align:center;">
 6
